--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,125 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Material+Icons+Outlined');
+
+html
+{
+    font-family: 'Montserrat', sans-serif;
+    color: #222;
+}
+html, body
+{
+    height: 100%;
+}
+
+h1
+{
+    font-size: 48px;
+}
+
+h2
+{
+    font-size: 40px;
+   
+}
+
+.container
+{
+    max-width: 850px;
+    margin: auto;
+}
+
+.btn
+{
+    align-items: center;
+    display: inline-flex;
+    padding: 12px 22px;
+    background: rgba(black, .7);
+
+    text-decoration: none;
+    color: white;
+
+    font-size: 18px;
+    font-weight: 600;
+    font-family: inherit;
+
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+
+    &:hover
+    {
+        background: rgba(black,0.90);
+        backdrop-filter: blur(2px);
+    }
+
+    &:active
+    {
+        background: rgba(black,.9);
+    }
+}
+
+.buttonsContainer
+{
+    display: flex;
+    margin-top: 22px;
+    &.buttonsCentered
+    {
+        justify-content: center;
+    }
+
+    .align-end
+    {
+        margin-left: auto;
+    }
+}
+
+.has-blurred-white-btn
+{
+    background: rgba(white,.85);
+    backdrop-filter: blur(20px);
+}
+
+h1.isBold,h2.isBold
+{
+    font-weight: bold;
+}
+
+.textBox,.textArea
+{
+    display: block;
+    font-size: 18px;
+    font-family: inherit;
+    width: 100%;
+    padding: 8px 10px;
+    background-color: rgba($color: white, $alpha: 0.9);
+    border: 2px solid rgba(black, .3);
+    border-radius: 4px;
+    margin-bottom: 10px;
+
+    &:hover
+    {
+        background: rgba(white,.95);
+        
+    }
+
+    &:focus
+    {
+        background: white;
+        outline: none;
+        
+    }
+
+    &:hover,&:focus
+    {
+        border-color: rgba(black,.4);
+    }
+}
+
+.textArea
+{
+    resize: vertical;
+    min-height: 100px;
+}
