--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -14,7 +14,7 @@
             <div class="checkBox">
                 <i class="material-icons-outlined">check</i>
             </div>
-            <p class="todoText"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam adipisci eligendi, quasi deserunt illo voluptatibus labore obcaecati ad ipsum natus cupiditate voluptates sapiente ducimus at, rerum inventore distinctio! Nihil, repellendus?</p>
+            <p class="todoText"> Lorem </p>
         </div>
 
 
