Added Accurate date and time

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class = "app-wrapper">
   <div class="topSection">
-    <h1>19:00</h1>
-    <h2>1 January 2020</h2>
+    <h1>{{dateTime | date:'shortTime'}}</h1>
+    <h2>{{dateTime | date:'fullDate'}}</h2>
   </div>
 
   <!-- contentSection-->
